k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: infracontrol-backend
  labels:
    app: infracontrol
spec:
  replicas: 2
  selector:
    matchLabels:
      app: infracontrol
  template:
    metadata:
      labels:
        app: infracontrol
    spec:
      serviceAccountName: infracontrol-sa
      containers:
        - name: backend
          image: saikoushik1/infracontrol:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
